# linkml-modelling-expert-skill

./: POETRY.md  SKILL.md  pyproject.toml
.github/workflows/: smoke-artifact.yml
assets/: minimal_schema_template.yaml  review_checklist.md
assets/fixtures/: failing_instance.json  inheritance_slot_usage.yaml  minimal_schema.yaml  prefix_schema.yaml
references/: generators-and-views.md  modelling-patterns.md  source-of-truth.md  validation-checklist.md
scripts/: check.sh  gen_docs.sh  lint_linkml.sh  profile_schema.py  setup_poetry.sh  validate_linkml.sh
